--- a/style_contacts.css
+++ b/style_contacts.css
@@ -326,7 +326,8 @@ body {
 }
 
 .footer-social li:nth-child(3) {
-    padding-bottom: 10px;
+    padding-top: 12px;
+    padding-bottom: 5px;
     border-right: 1px solid white;
 }
 
@@ -342,15 +343,51 @@ body {
     padding-right: 52px;
 }
 
-.soc-yt-icon {
-    padding-right: 30px;
-    padding-left: 20px;
+.social i {
+    font-size: 25px;
 }
 
-.soc-vk-icon {
-    padding-right: 30px;
+.socials a i {
+    transition: all 0.3s linear;
 }
 
-.soc-fb-icon {
-    padding-right: 30px;
+.socials a i {
+    transform: scale(0.7);
+}
+
+.socials a:hover i {
+    transform: scale(0.9);
+}
+
+.youtube:hover {
+    color: red;
+}
+
+.vk:hover {
+    color: #0077FF;
+}
+
+.facebook:hover {
+    color: blue;
+}
+
+.fa-youtube {
+    width: 26px;
+    height: 26px;
+    padding-right: 15px;
+    padding-left: 15px;
+}
+
+.fa-vk {
+    width: 24px;
+    height: 24px;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+.fa-facebook-f {
+    width: 26px;
+    height: 26px;
+    padding-left: 15px;
+    padding-right: 20px;
 }
