--- a/style_contacts.css
+++ b/style_contacts.css
@@ -47,6 +47,8 @@ body {
     float: right;
     font-size: 13px;
     font-weight: 300;
+    text-decoration: none;
+    color: white;
 }
 
 .header-top {
@@ -68,8 +70,9 @@ body {
     color: white;
 }
 
-.header-nav a:hover {
+.header-nav li:hover {
     text-decoration: underline;
+    cursor: pointer;
 }
 
 .header-nav a:active {
@@ -80,10 +83,11 @@ body {
     float: left;
     border-bottom: 1px solid white;
     border-top: 1px solid white;
-    padding-left: 106px;
-    padding-right: 108px;
+    padding-left: 0px;
+    padding-right: 0px;
     padding-top: 7px;
     padding-bottom: 7px;
+    text-align: center;
 }
 
 .header-nav li:nth-child(2),
@@ -92,8 +96,21 @@ body {
     border-right: 1px solid white;
 }
 
+.header-nav li:nth-child(1) {
+    width: 266px;
+}
+
 .header-nav li:nth-child(2) {
     border-right: none;
+    width: 275px;
+}
+
+.header-nav li:nth-child(3) {
+    width: 289px;
+}
+
+.header-nav li:nth-child(4) {
+    width: 276px;
 }
 
 .promo-title {
@@ -148,6 +165,11 @@ body {
     padding-top: 0px;
     line-height: 55px;
     width: 573px;
+}
+
+.big-number a {
+    color: white;
+    text-decoration: none;
 }
 
 .big-number:hover {
@@ -308,39 +330,49 @@ body {
 
 .footer-social li:nth-child(1) {
     padding-left: 86px;
-    padding-top: 10px;
+    padding-top: 17px;
+    padding-bottom: 17px;
     padding-right: 63px;
     text-transform: uppercase;
     font-size: 14px;
-    font-weight: 400;
+    font-weight: 600;
 }
 
 .footer-social li:nth-child(2) {
-    padding-bottom: 13px;
-    padding-top: 12px;
+    padding-top: 17px;
+    padding-bottom: 17px;
     border-left: 1px solid white;
     border-right: 1px solid white;
     font-size: 14px;
     padding-left: 55px;
     padding-right: 55px;
+    font-weight: 600;
 }
 
 .footer-social li:nth-child(3) {
-    padding-top: 12px;
-    padding-bottom: 5px;
+    padding-top: 18px;
+    padding-bottom: 8px;
     border-right: 1px solid white;
 }
 
 .footer-social li:nth-child(4) {
-    padding-bottom: 13px;
-    padding-top: 12px;
+    padding-left: 16px;
+    padding-right: 36px;
+    padding-top: 18px;
+    padding-bottom: 16px;
     font-size: 14px;
     text-transform: uppercase;
+    font-weight: 600;
 }
 
 .footer-social li:nth-child(4) p {
-    padding-left: 61px;
+    padding-left: 57px;
     padding-right: 52px;
+}
+
+.footer-phone {
+    text-decoration: none;
+    color: white;
 }
 
 .social i {
