--- a/style_card.css
+++ b/style_card.css
@@ -8,6 +8,7 @@ body {
     color: #282828;
     background-color: white;
     font-weight: 600;
+    overflow-x: hidden;
 }
 
 .container {
@@ -54,11 +55,11 @@ body {
 
 .header-top {
     padding-bottom: 25px;
-    margin-bottom: 20px;
+    margin-bottom: 25px;
 }
 
 .header-nav {
-    width: 1110px;
+    width: 100%;
     padding-left: 0;
     list-style: none;
     font-size: 14px;
@@ -308,6 +309,97 @@ body {
 
 
 /*------------------------------------------------------------------------*/
+
+
+/*****************************************************************/
+
+.slider-section {
+    position: relative;
+    margin-top: 100px;
+}
+
+.slider-title {
+    text-align: center;
+    font-family: 'Montserrat';
+    font-weight: bold;
+}
+
+.swiper-container {
+    width: 1200px;
+    height: 600px;
+}
+
+.slide-content {
+    width: 350px;
+    height: 432px;
+    box-shadow: 0px 0px 0px grey;
+    -webkit-transition: box-shadow .6s ease-out;
+}
+
+.slide-content img {
+    width: 100px;
+    height: 300px;
+    padding-top: 10px;
+}
+
+.swiper-slide:nth-child(1) {
+    margin-left: 220px;
+}
+
+.swiper-slide {
+    margin-left: 140px;
+    width: 380px;
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+    /* Center slide text vertically */
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    flex-direction: column;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+}
+
+.slide-content:hover {
+    box-shadow: 1px 8px 20px grey;
+    -webkit-transition: box-shadow .6s ease-in;
+}
+
+.slide-content h3 {
+    text-align: left;
+    margin: 0px;
+    padding: 0px;
+    font-family: 'Playfair Display';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 150%;
+    /* or 27px */
+    color: #000000;
+    padding-left: 35px;
+    padding-top: 15px;
+}
+
+.slide-content p {
+    margin-top: 8px;
+    text-align: left;
+    padding-right: 50px;
+    padding-left: 35px;
+    padding-bottom: 15px;
+    font-family: 'Playfair Display';
+    color: #998431;
+}
+
+
+/******************************************************************/
 
 .footer-section {
     background-color: #E6E3C4;
