--- a/css/style.css
+++ b/css/style.css
@@ -118,7 +118,7 @@ body {
 
 .header-section {
     background-color: black;
-    background-image: url(img/header-bg.png);
+    background-image: url(/img/header-bg.png);
     background-repeat: no-repeat;
     background-position-y: 100%;
     background-position-x: 50%;
@@ -292,15 +292,15 @@ body {
     max-width: 580px;
     text-align: justify;
     line-height: 23px;
-    margin-top: 61px;
+    margin-top: 75px;
     margin-right: 45px;
 }
 
 .item-article:after {
     content: "";
     position: absolute;
-    top: 48%;
-    right: 18%;
+    top: 46%;
+    right: 22%;
     width: 280px;
     height: 1px;
     background-image: url("https://isinshino.github.io/le-corte/img/article_line.png");
@@ -330,6 +330,7 @@ body {
 .slider-section {
     min-height: 835px;
     position: relative;
+    width: 1300px;
 }
 
 .slider-left-part {
@@ -344,13 +345,12 @@ body {
     float: right;
 }
 
-.slider-section .counter {
+.swiper-pagination {
     font-family: "Playfair Display", serif;
     font-size: 36px;
     color: #E8E4C4;
     font-weight: bold;
-    padding-top: 760px;
-    margin-left: 15px;
+    padding-bottom: 25px;
 }
 
 .swiper-button-next,
@@ -364,9 +364,9 @@ body {
     padding: 16px;
     color: white;
     font-weight: bold;
-    font-size: 18px;
+    font-size: 16px;
     transition: 0.6s ease;
-    border-radius: 0 2px 2px 0;
+    border-radius: 0 1px 1px 0;
     color: black;
 }
 
@@ -499,7 +499,7 @@ body {
 
 .degustation-section {
     min-height: 720px;
-    background-image: url(img/border.png);
+    background-image: url(/img/border.png);
     background-repeat: no-repeat;
     background-position-x: 50%;
     background-position-y: 50%;
@@ -740,7 +740,7 @@ body {
     right: 25%;
     width: 60px;
     height: 25px;
-    background-image: url("img/select-arrow.png");
+    background-image: url("/img/select-arrow.png");
     background-repeat: no-repeat;
     background-color: #282828;
 }
