--- a/css/style_card.css
+++ b/css/style_card.css
@@ -313,67 +313,53 @@ body {
 
 /*****************************************************************/
 
-.slider-section {
-    position: relative;
-    margin-top: 100px;
-}
-
 .slider-title {
     text-align: center;
-    font-family: 'Montserrat';
-    font-weight: bold;
+    margin-bottom: 0px;
 }
 
-.swiper-container {
-    width: 1200px;
-    height: 600px;
+.contain {
+    margin: 0 auto;
+    max-width: 1350px;
+    width: 100%;
+    margin-bottom: 50px;
 }
 
-.slide-content {
-    width: 350px;
+.item {
+    align-items: left;
+    background-color: white;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    width: 290px;
     height: 432px;
+    justify-content: center;
     box-shadow: 0px 0px 0px grey;
     -webkit-transition: box-shadow .6s ease-out;
 }
 
-.slide-content img {
-    width: 100px;
-    height: 300px;
-    padding-top: 10px;
-}
-
-.swiper-slide:nth-child(1) {
-    margin-left: 220px;
-}
-
-.swiper-slide {
-    margin-left: 140px;
-    width: 380px;
-    text-align: center;
-    font-size: 18px;
-    background: #fff;
-    /* Center slide text vertically */
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    flex-direction: column;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    -webkit-justify-content: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    -webkit-align-items: center;
-    align-items: center;
-}
-
-.slide-content:hover {
+.item:hover {
     box-shadow: 1px 8px 20px grey;
     -webkit-transition: box-shadow .6s ease-in;
 }
 
-.slide-content h3 {
+.item a {
+    text-decoration: none;
+}
+
+.item a:visited {
+    color: #000;
+}
+
+.item img {
+    align-self: center;
+    width: 100%;
+    height: 300;
+    padding-top: 10px;
+    padding-left: 98px;
+}
+
+.item h3 {
     text-align: left;
     margin: 0px;
     padding: 0px;
@@ -384,19 +370,24 @@ body {
     line-height: 150%;
     /* or 27px */
     color: #000000;
-    padding-left: 35px;
+    padding-left: 0px;
     padding-top: 15px;
+    padding-left: 30px;
 }
 
-.slide-content p {
+.item p {
+    font-weight: bold;
     margin-top: 8px;
     text-align: left;
-    padding-right: 50px;
-    padding-left: 35px;
+    padding-left: 30px;
     padding-bottom: 15px;
     font-family: 'Playfair Display';
     color: #998431;
+    margin-bottom: 0px;
 }
+
+
+/******************************************************************/
 
 
 /******************************************************************/
