--- a/css/style_card.css
+++ b/css/style_card.css
@@ -246,7 +246,7 @@ body {
     left: 94%;
     width: 30px;
     height: 1px;
-    background-image: url("img/info-line.png");
+    background-image: url("../img/info-line.png");
     background-repeat: no-repeat;
 }
 
