--- a/css/style_card.css
+++ b/css/style_card.css
@@ -105,6 +105,30 @@ body {
 .header-nav li:nth-child(2) {
     border-right: none;
     width: 275px;
+    position: relative;
+}
+
+li:nth-child(2) input[type="text"] {
+    display: none;
+    position: absolute;
+    background-color: transparent;
+    border: none;
+    user-select: none;
+    pointer-events: none;
+    z-index: 999;
+    color: black;
+}
+
+.cart-li:after {
+    visibility: hidden;
+    position: absolute;
+    bottom: 20px;
+    right: 34%;
+    content: "";
+    width: 15px;
+    height: 15px;
+    background-color: red;
+    border-radius: 1000px;
 }
 
 .header-nav li:nth-child(3) {
@@ -292,7 +316,8 @@ body {
     color: #FFFFFF;
     margin-top: 0px;
     text-decoration: none;
-    transition: 0.7s;
+    transition: 0.15s;
+    border: none;
 }
 
 .to-cart-btn:hover {
@@ -301,6 +326,7 @@ body {
 
 .to-cart-btn:active {
     color: rgba(255, 255, 255, 0.3);
+    transform: scale(0.9);
 }
 
 .info {
