--- a/css/style_collection.css
+++ b/css/style_collection.css
@@ -111,7 +111,7 @@ body {
 }
 
 li:nth-child(3) input[type="text"] {
-    padding-left: 4px;
+    padding-left: 3.5px;
     padding-bottom: 10px;
     font-family: 'Montserrat';
     display: none;
@@ -127,6 +127,7 @@ li:nth-child(3) input[type="text"] {
     background-position-x: 0;
     background-position-y: 2px;
     background-size: 15px 15px;
+    font-size: 12px;
 }
 
 .header-nav li:nth-child(3) {
