--- a/css/style_cart.css
+++ b/css/style_cart.css
@@ -59,6 +59,7 @@ body {
 }
 
 .header-nav {
+    display: flex;
     width: 100%;
     padding-left: 0;
     list-style: none;
@@ -82,7 +83,6 @@ body {
 }
 
 .header-nav li {
-    float: left;
     border-bottom: 1px solid #282828;
     border-top: 1px solid #282828;
     padding-left: 0px;
@@ -145,37 +145,33 @@ li:nth-child(3) input[type="text"] {
     text-align: center;
 }
 
-.items-header-title {
-    float: left;
-    justify-content: space-between;
-    border-bottom: 1px solid lightgray;
-}
-
-.items-header:first-child {
-    margin-left: 0px;
-}
-
-h4 {
-    text-align: left;
-    margin: 0;
-    margin-top: 40px;
-    padding: 0;
+.cart-title {
     font-family: 'Montserrat';
     font-style: normal;
-    font-weight: 600;
-    font-size: 16px;
-    line-height: 150%;
-    /* or 24px */
+    font-weight: 500;
+    font-size: 32px;
     color: #282828;
-    padding-bottom: 5px;
+    margin-bottom: 0px;
+}
+
+.cart-article {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    color: #282828;
+    margin-top: 10px;
+    margin-bottom: 0px;
 }
 
 .cart-left-part {
+    margin-top: 70px;
     float: left;
     width: 970px;
 }
 
 .cart-right-part {
+    margin-top: 110px;
     float: right;
     width: 400px;
     height: 456px;
@@ -183,25 +179,101 @@ h4 {
     border-radius: 5px;
 }
 
+.items {
+    display: flex;
+    flex-direction: column;
+}
+
+.item .picture,
+.item .name,
+.item .amount,
+.item .total {
+    float: left;
+}
+
 .item {
     position: relative;
+}
+
+.item:after {
+    top: 140px;
+    right: -2%;
+    content: '';
+    position: absolute;
+    height: 1px;
+    width: 1010px;
+    background-image: url(../img/item-after.png);
+}
+
+.gray {
+    margin-bottom: 0px;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 15px;
+    color: #B5AFAF;
+}
+
+.before-amount {
+    margin-bottom: 30px;
+}
+
+.tag {
+    cursor: pointer;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 13px;
+    line-height: 150%;
+    /* or 20px */
+    color: #282828;
+    padding: 5px;
+    border: 1px solid #998431;
+    background-color: rgba(230, 227, 196, 0.7);
+    width: max-content;
+    border-radius: 5px;
+    float: left;
+    margin-left: 7px;
+    margin-top: 5px;
+}
+
+.name .tag:nth-of-type(2) {
+    margin-left: 0px;
+}
+
+h5 {
+    margin-top: 5px;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 15px;
+    color: #000000;
+    margin-bottom: 6px;
+}
+
+.one-price,
+.total-price {
     display: flex;
-    justify-content: space-evenly;
-    flex-direction: row;
-    border-bottom: 1px solid lightgray;
+    justify-content: space-between;
+    width: 200px;
 }
 
-.item:first-child {
-    margin-top: 70px;
+.one-price p,
+.total-price p {
+    margin: 5px;
 }
 
-.items-header h4:nth-child(1) {
-    width: 430px;
+.total-price p {
+    margin-top: 0px;
+}
+
+.one-price p {
+    margin-top: 10px;
 }
 
 .item .picture {
     width: 80px;
-    padding-top: 30px;
+    padding-top: 20px;
     padding-bottom: 20px;
 }
 
@@ -217,11 +289,6 @@ h4 {
     color: #000000;
 }
 
-.items-header h4:nth-child(2) {
-    width: 150px;
-    padding-left: 15px;
-}
-
 .item .price {
     padding-left: 25px;
     width: 84px;
@@ -235,11 +302,6 @@ h4 {
     color: #000000;
 }
 
-.items-header h4:nth-child(3) {
-    width: 170px;
-    padding-left: 25px;
-}
-
 .amount-number {
     border: 1px solid #998431;
     border-radius: 3px;
@@ -249,6 +311,7 @@ h4 {
 }
 
 .item .amount {
+    margin-left: 50px;
     width: 177px;
     align-self: center;
     font-family: 'Montserrat';
@@ -258,16 +321,10 @@ h4 {
     line-height: 150%;
     /* or 24px */
     color: #000000;
-    padding-left: 50px;
-}
-
-.items-header h4:nth-child(4) {
-    width: 140px;
-    padding-left: 15px;
-    padding-right: 25px;
 }
 
 .item .total {
+    margin-left: 50px;
     width: 143px;
     align-self: center;
     font-family: 'Montserrat';
@@ -283,7 +340,7 @@ h4 {
     align-self: center;
     position: absolute;
     right: 2%;
-    top: 40%;
+    top: 50px;
     cursor: pointer;
     padding: 3px;
     border-radius: 5px;
