--- a/css/style_collection.css
+++ b/css/style_collection.css
@@ -62,6 +62,7 @@ body {
 
 .header-nav {
     width: 100%;
+    display: flex;
     padding-left: 0;
     list-style: none;
     font-size: 14px;
@@ -84,7 +85,6 @@ body {
 }
 
 .header-nav li {
-    float: left;
     border-bottom: 1px solid #282828;
     border-top: 1px solid #282828;
     padding-left: 0px;
@@ -353,10 +353,10 @@ li:nth-child(3) input[type="text"] {
 }
 
 .footer-nav {
+    display: flex;
     padding-top: 50px;
     list-style: none;
     width: 100%;
-    padding-bottom: 50px;
     padding-left: 0px;
     margin-bottom: 0px;
     margin-top: 0px;
@@ -397,14 +397,16 @@ li:nth-child(3) input[type="text"] {
 }
 
 .footer-social {
+    width: 100%;
+    display: flex;
+    flex-wrap: nowrap;
     list-style: none;
     padding-left: 0px;
     margin-bottom: 0px;
-    margin-top: 12px;
+    margin-top: 0px;
 }
 
 .footer-social li {
-    float: left;
     padding: 15px 32px;
     border-bottom: 1px solid #282828;
 }
