sale input, clickable link and picks
cart page promocode input, script for counting and checking sale, clickable items, page for each wine-item

--- a/css/style_card.css
+++ b/css/style_card.css
@@ -371,7 +371,9 @@ li:nth-child(3) input[type="text"] {
     text-decoration: none;
 }
 
-.item a:visited {
+.item a:visited,
+.item-link,
+.item-link:link {
     color: #000;
 }
 
